building mood pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<p>Create a select form with the emojis as possible inputs that directs to POST '/mood'</p>
+<!-- <p>Create a select form with the emojis as possible inputs that directs to POST '/mood'</p> -->
+
+<h1>What's The Mood?</h1>
+<div class="container">
+  <% form_for (@mood) do |f| %>
+    <% Dir.foreach('/Users/oliviaellis/Desktop/SEI/Projects/Project7/groupproject/app/assets/images/emojis') do |item| %>
+      <% next if item[0] == '.' %>
+      <div class="emoji">
+        <%= image_tag("emojis/"+item) %>
+        <%= f.option 
+      </div>
+    <% end %>
+  <% end %>
+</div>
