--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
-<div class="menu-container">
+<div class="menu-container" id="menu-icon" onclick="menuOpen()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
 </div>
+
+
+
+
+<script src="/assets/pages.js"></script>
