--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,15 @@
-<div class="menu-container" id="menu-icon" onclick="menuOpen()">
+<div id="menu-icon" class="menu-container" onclick="menuOpen()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
 </div>
 
-
+<div id="menu-overlay" class="overlay-container">
+  <div class="menu-content">
+    <div class="signup">Signup</div>
+    <div class="login">Login</div>
+  </div>
+</div>
 
 
 <script src="/assets/pages.js"></script>
