added js to overlay for slidedown effect onclick + styling

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,13 @@
-<div id="menu-icon" class="menu-container" onclick="menuOpen()">
+<!-- MENU SECTION  -->
+<div id="menu-icon" class="menu-container" onclick="openOverlay()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
 </div>
 
+
 <div id="menu-overlay" class="overlay-container">
+  <div class="closebtn" onclick="closeOverlay()">&times;</div>
   <div class="menu-content">
     <div class="signup">Signup</div>
     <div class="login">Login</div>
