--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,6 +8,7 @@
   cursor: pointer;
   float: right;
   z-index: 1;
+
 }
 
 .bar1, .bar2, .bar3 {
@@ -18,37 +19,57 @@
   transition: .4s;
 }
 
-.switch .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-
-}
-
-.switch .bar2 {
-  opacity: 0;
-}
-
-.switch .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-
-}
+// .switch .bar1 {
+//   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+//
+// }
+//
+// .switch .bar2 {
+//   opacity: 0;
+//     .overlay-container {
+//       height: 0;
+//     }
+// }
+//
+// .switch .bar3 {
+//   -webkit-transform: rotate(45deg) translate(-8px, -8px);
+//
+// }
 
 // MENU OVERLAY
 .overlay-container {
-  display: grid;
-  justify-content: center;
-  height: 100%;
+  height: 0;
   width: 100%;
-  z-index: -1;
+  z-index: 1;
   top: 0;
   left: 0;
   position: fixed;
-  background-color: whitesmoke;
-  grid-template: 20px 20px / auto;
+  background-color: yellow;
+  overflow-y: hidden;
   transition: .5s;
 }
 
 .menu-content {
+ display: grid;
+ justify-content: center;
+ grid-template: 20px 20px / auto;
+ grid-gap: 10px;
  position: relative;
  text-align: center;
  top: 10em;
 }
+
+.closebtn {
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+// @media screen and (max-width: 1066px) {
+//   .menu-content {
+//     font-size: 1.5em;
+//
+//   }
+// }
