--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,17 @@
 <!-- MENU SECTION  -->
-<div id="menu-icon" class="menu-container" onclick="openOverlay()">
+<div class="menu-container" onclick="openOverlay()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
+
+  <div class="menu-dropdown">
+    <a href="/">test</a>
+    <a href="/">test</a>
+    <a href="/">test</a>
+  </div>
 </div>
 
-
-<div id="menu-overlay" class="overlay-container">
+<div id="form-overlay" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay()">&times;</div>
   <div class="menu-content">
     <div class="signup">Signup</div>
