--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <!-- MENU SECTION  -->
-<div class="menu-container" onclick="openOverlay()">
+<div class="menu-container" onclick="openMenu()">
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
 
-  <div class="menu-dropdown">
-    <a href="/">test</a>
-    <a href="/">test</a>
-    <a href="/">test</a>
+  <div id="menu-content" class="menu-dropdown">
+    <a href="/">About</a>
+    <a href="/">Login</a>
+    <a href="/">Signup</a>
   </div>
 </div>
 
