--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <!-- MENU SECTION  -->
 <div class="menu-container" onclick="openMenu()">
+  <!-- <i class="fas fa-bars"></i> -->
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
@@ -49,5 +50,5 @@
   <%= submit_tag('Submit') %>
 <% end %>
 
-<%= javascript_include_tag 'emoji-grid' %>
-<script src="/assets/pages.js"></script>
+<%= javascript_include_tag 'emoji-grid', 'pages' %>
+<!-- <script src="/assets/pages.js"></script> -->
