--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,10 +31,10 @@
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
   <div class="overlay-login">
     <%= form_tag("/login", method: "post", remote: true) do %>
-      <h2>Login Form</h2>
-      <%= text_field_tag :email, nil, placeholder: "Email" %>
-      <%= text_field_tag :password, nil, placeholder: "Password" %>
-      <%= submit_tag("Login") %>
+      <h2>Login</h2>
+      <%= text_field_tag :email, nil, placeholder: "Email" %><br>
+      <%= text_field_tag :password, nil, placeholder: "Password" %><br>
+      <%= submit_tag("Login", {:class => 'loginBtn'})  %>
     <% end %>
   </div>
 </div>
@@ -49,7 +49,7 @@
       <%= f.text_field :first_name, placeholder: "First Name" %>
       <%= f.text_field :last_name, placeholder: "Last Name" %>
       <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %>
-      <%= f.submit "Create" %>
+      <%= f.submit("Create", {:class => 'createBtn'}) %>
     <% end %>
   </div>
 </div>
