--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -85,8 +85,23 @@
 //   }
 // }
 
+// Take automatic top margin off html
+* {
+  margin: 0;
+}
+
 body {
   font-family: 'Helvetica', sans-serif;
+  margin: 0;
+}
+
+.background {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  margin: 0;
+  position: fixed;
+  z-index: -1;
 }
 
 h1 {
@@ -108,5 +123,17 @@ h1 {
     img {
       height: 120px;
     }
+  }
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  color: white;
+  h1 {
+    text-shadow: 5px 5px black;
+  }
+  img {
+    width: 50px;
   }
 }
