--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,6 +1,9 @@
-<h1>The Mood Is</h1>
-<%= image_tag("emojis/#{@mood}") %>
+<div class="background" style="background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(<%=@photo['urls']['full']%>);">
+</div>
+<div class="header">
+  <h1>The Mood Is: <%= image_tag("emojis/#{@mood}") %></h1>
+</div>
 
-<%= render 'event' %>
-<%= render 'poem' %>
-<%= render 'music' %>
+<%= render 'shared/event', object: @event %>
+<%= render 'shared/poem' %>
+<%= render 'shared/music' %>
