--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
       <h2>Login</h2>
       <%= text_field_tag :email, nil, placeholder: "Email" %><br>
       <%= text_field_tag :password, nil, placeholder: "Password" %><br>
-      <%= submit_tag("Login", {:class => 'loginBtn'})  %>
+      <%= submit_tag("Login", {:class => 'loginBtn'}) %>
     <% end %>
   </div>
 </div>
@@ -43,12 +43,12 @@
   <div class="closebtn" onclick="closeOverlay3()">&times;</div>
   <div class="overlay-signup">
     <%= form_for @user, remote:true do |f| %>
-      <h2>Signup Form</h2>
-      <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %>
-      <%= f.text_field :username, placeholder: "Username" %>
-      <%= f.text_field :first_name, placeholder: "First Name" %>
-      <%= f.text_field :last_name, placeholder: "Last Name" %>
-      <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %>
+      <h2>Signup</h2>
+      <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
+      <%= f.text_field :username, placeholder: "Username" %><br>
+      <%= f.text_field :first_name, placeholder: "First Name" %><br>
+      <%= f.text_field :last_name, placeholder: "Last Name" %><br>
+      <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
       <%= f.submit("Create", {:class => 'createBtn'}) %>
     <% end %>
   </div>
