--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -98,7 +98,7 @@ body {
 .background {
   width: 100%;
   height: 100%;
-  background-size: contain;
+  background-size: cover;
   margin: 0;
   position: fixed;
   z-index: -1;
@@ -130,10 +130,14 @@ h1 {
   position: fixed;
   top: 0;
   color: white;
+  padding: 3%;
   h1 {
     text-shadow: 5px 5px black;
   }
   img {
-    width: 50px;
+    width: 65px;
+    position: relative;
+    top: 10px;
+    padding-left: 20px;
   }
 }
