--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -4,16 +4,18 @@
   <h1>The Mood Is: <%= image_tag("emojis/#{@mood}") %></h1>
 </div>
 
-<%= render 'shared/event', object: @event %>
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
+<%= render 'shared/event', object: @event %>
 
-<button id="prev">Previous</button>
-<button id="play">Play/Pause</button>
-<button id="next">Next</button>
-<p id="track_name">Track Name:</p>
-<p id="artist">Artist: </p>
-<p id="album">Album: </p>
+<div class="player">
+  <button id="prev">Previous</button>
+  <button id="play">Play/Pause</button>
+  <button id="next">Next</button>
+  <p id="track_name">Track Name:</p>
+  <p id="artist">Artist: </p>
+  <p id="album">Album: </p>
+</div>
 
 <script src="https://sdk.scdn.co/spotify-player.js"></script>
 
@@ -23,7 +25,7 @@
       const player = new Spotify.Player({
           name: "Feelng's Player",
           getOauthToken: cb => { cb(token); }
-      });    
+      });
 
       player.addListener('initialization_error', ({ message }) => { console.error(message); });
         player.addListener('authentication_error', ({ message }) => { console.error(message); });
@@ -51,7 +53,7 @@
           console.log('Device ID has gone offline', device_id);
         });
 
-        
+
 
         document.getElementById("prev").addEventListener("click", function() {
             player.pause().then(() => console.log("previous track playing"))
@@ -76,7 +78,7 @@
     type: "PUT",
     data: '{"uris": ["spotify:track:65ES1qwOB577ZnTkizMXJJ"]}',
     beforeSend: function(xhr){xhr.setRequestHeader('Authorization', 'Bearer <%=current_spotify_user.access_token%>' );},
-    success: function(data) { 
+    success: function(data) {
         console.log(data)
     }
   });
