--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,17 +27,17 @@
   </div>
 </div>
 
-<div id="overlay2" class="overlay-container">
+<!-- <div id="overlay2" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
-  <div class="overlay-login">
-    <%= form_tag("/login", method: "post", remote: true) do %>
-      <h2>Login</h2>
-      <%= text_field_tag :email, nil, placeholder: "Email" %><br>
-      <%= text_field_tag :password, nil, placeholder: "Password" %><br>
-      <%= submit_tag("Login", {:class => 'loginBtn'}) %>
-    <% end %>
-  </div>
-</div>
+  <div class="overlay-login"> -->
+    <%#= form_tag("/login", method: "post", remote: true) do %>
+      <!-- <h2>Login</h2> -->
+      <%#= text_field_tag :email, nil, placeholder: "Email" %><br>
+      <%#= text_field_tag :password, nil, placeholder: "Password" %><br>
+      <%#= submit_tag("Login", {:class => 'loginBtn'}) %>
+    <%# end %>
+  <!-- </div>
+</div> -->
 
 <div id="overlay3" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay3()">&times;</div>
