--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -6,7 +6,15 @@
 
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
-<%= render 'shared/event', object: @event %>
+<%= render 'shared/event' %>
+
+<% if session[:id] %>
+  <%= form_for @entry, url: new_entry_path, remote: true, html: {class: "entry_form"} do |f| %>
+    <%= f.hidden_field :journal_id, value: User.find(session[:id]).journal.id %>
+    <%= f.hidden_field :mood, value: @mood %>
+    <%= f.submit :"Save this Mood" %>
+  <% end %>
+<% end %>
 
 <div class="player">
   <button id="prev">Previous</button>
