added results container to profile page + styling for testing

--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -1,3 +1,12 @@
-<%= month_calendar do |date| %>
-  <%= date.day %>
-<% end %>
+<div class="profile-container">
+
+  <%= month_calendar do |date| %>
+    <%= date.day %>
+    <% end %>
+
+  <div class="results-wrapper">
+    <div class="">test</div>
+    <div class="">test</div>
+    <div class="">test</div>
+ </div>
+</div>
