--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -120,6 +120,42 @@ body {
   }
 }
 
+// USER PROFILE
+.simple-calendar {
+  display: grid;
+  justify-content: center;
+  .day {
+    background-color: whitesmoke;
+    border-radius: 5px;
+    padding: 5px 51px 47px 0;
+  }
+  .calendar-heading {
+    text-align: center;
+    font-size: larger;
+  }
+}
+
+.results-wrapper {
+  display: grid;
+  justify-content: center;
+  position: relative;
+  background-color: red;
+  top: 3em;
+  grid-template: 100px / 20px 20px 20px;
+
+}
+
+@media screen and (max-width: 390px) {
+  .simple-calendar {
+    display: grid;
+    justify-content: center;
+    position: relative;
+    .day {
+      padding: 5px 27px 30px 0;
+  }
+ }
+}
+
 // Take automatic top margin off html
 * {
   margin: 0;
