--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -5,7 +5,9 @@
     <% end %>
 
   <div class="results-wrapper">
-    <div class="">test</div>
+    <div class="">
+      <p>This is for testing the area of this grid item</p>
+    </div>
     <div class="">test</div>
     <div class="">test</div>
  </div>
