--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -1,5 +1,61 @@
 <div class="background" style="background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(<%=@photo['urls']['full']%>);">
 </div>
+
+<!-- MENU SECTION  -->
+<div class="menu-container" onclick="openMenu()">
+  <div class="bar1"></div>
+  <div class="bar2"></div>
+  <div class="bar3"></div>
+
+  <div id="menu-content" class="menu-dropdown">
+    <div onclick="openOverlay1()">About</div>
+    <% if !session[:id] %>
+      <div onclick="openOverlay2()">Login</div>
+      <div onclick="openOverlay3()">Signup</div>
+    <% else %>
+      <%= link_to "Profile", "/profile" %>
+      <%= link_to "Logout", logout_path, method: :post %>
+    <% end %>
+  </div>
+</div>
+
+<!-- MENU OVERLAYS -->
+<div id="overlay1" class="overlay-container">
+  <div class="closebtn" onclick="closeOverlay1()">&times;</div>
+  <div class="overlay-about">
+    <p>'Feeln' is your go-to content generator app based...you guessed it! Your current mood!<br>
+        Select an emoji and watch the magic to happen!
+    </p>
+  </div>
+</div>
+
+<!-- <div id="overlay2" class="overlay-container">
+  <div class="closebtn" onclick="closeOverlay2()">&times;</div>
+  <div class="overlay-login"> -->
+    <%#= form_tag("/login", method: "post", remote: true) do %>
+      <!-- <h2>Login</h2> -->
+      <%#= text_field_tag :email, nil, placeholder: "Email" %><br>
+      <%#= text_field_tag :password, nil, placeholder: "Password" %><br>
+      <%#= submit_tag("Login", {:class => 'loginBtn'}) %>
+    <%# end %>
+  <!-- </div>
+</div> -->
+
+<div id="overlay3" class="overlay-container">
+  <div class="closebtn" onclick="closeOverlay3()">&times;</div>
+  <div class="overlay-signup">
+    <%= form_for @user, remote:true do |f| %>
+      <h2>Signup</h2>
+      <%= f.email_field :email, placeholder: "Email (e.g. example@hotmail.com)" %><br>
+      <%= f.text_field :username, placeholder: "Username" %><br>
+      <%= f.text_field :first_name, placeholder: "First Name" %><br>
+      <%= f.text_field :last_name, placeholder: "Last Name" %><br>
+      <%= f.password_field :password, placeholder: "Password (min. 8 characters)" %><br>
+      <%= f.submit("Create", {:class => 'createBtn'}) %>
+    <% end %>
+  </div>
+</div>
+
 <div class="header">
   <h1>The Mood Is: <%= image_tag("emojis/#{@mood}") %></h1>
 </div>
@@ -85,3 +141,5 @@
 }
 
 </script>
+
+<%= javascript_include_tag 'emoji-grid', 'pages' %>
