--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -6,7 +6,7 @@
 
 <%= render 'shared/poem' %>
 <%= render 'shared/music' %>
-<%= render 'shared/event', object: @event %>
+<%= render 'shared/event' %>
 
 <div class="player">
   <button id="prev">Previous</button>
