--- a/app/views/shared/_music.html.erb
+++ b/app/views/shared/_music.html.erb
@@ -1,4 +1,4 @@
-<div class="feature" id="music" style="background-color: <%=@photo['color']%>">
+<div class="feature" id="music" style="border: 10px solid <%=@photo['color']%>">
   <h2>Listen</h2>
   <h3>Title</h3>
   <h4>Artist</h4>
