--- a/app/views/shared/_event.html.erb
+++ b/app/views/shared/_event.html.erb
@@ -1,4 +1,4 @@
-<div class="feature" id="event" style="background-color: <%=@photo['color']%>">
+<div class="feature" id="event" style="border: 10px solid <%=@photo['color']%>">
   <h2>Do</h2>
   <h3><%= @event['groups'][0]['items'][0]['venue']['name'] %></h3>
   <p><%= @event['groups'][0]['items'][0]['venue']['location']['formattedAddress'].join(" ") %></p>
