API calls work. Had to move the query from application.rb to the controller. Possibly find out a cleaner solution than putting all of the logic in the controller. Everything displays now. However playing on page load does not work. Next make the spotify playback async

--- a/app/views/pages/results.html.erb
+++ b/app/views/pages/results.html.erb
@@ -8,8 +8,8 @@
 <p id="artist">Artist: </p>
 <p id="album">Album: </p>
 <img src="#" alt="Album Cover" id="album_cover">
-<p id="playlist_name"> <%= @playlist.name %> </p>
-<img src="<%=@playlist.img%>%" alt="" id="playlist_img">
+<p id="playlist_name"> <%= @playlist_name %> </p>
+<img src="<%=@playlist_img%>" alt="" id="playlist_img">
 
 
 <script src="https://sdk.scdn.co/spotify-player.js"></script>
@@ -52,7 +52,7 @@
         
 
         document.getElementById("prev").addEventListener("click", function() {
-            player.pause().then(() => console.log("previous track playing"))
+            player.previousTrack().then(() => console.log("previous track playing"))
         });
         document.getElementById("play").addEventListener("click", function() {
             player.togglePlay().then(() => console.log("Playback toggled"))
@@ -64,7 +64,7 @@
         // Connect to the player!
         player.connect();
 
-        play(device_id, <%=@playist_uri%>)
+    
 
   };
 
@@ -72,10 +72,13 @@
   $.ajax({
     url: "https://api.spotify.com/v1/me/player/play?device_id=" + device_id,
     type: "PUT",
-    data: '{"context_uri": [playlist_uri]}',
-    beforeSend: function(xhr){xhr.setRequestHeader('Authorization', 'Bearer <%=current_spotify_user.access_token%>' );},
+    data: JSON.stringify({"context_uri":playlist_uri}),
+    beforeSend: function(xhr){xhr.setRequestHeader('Authorization', 'Bearer <%=current_spotify_user.access_token%>'  );},
     success: function(data) { 
-        console.log(data)
+        console.log(data);
+    },
+    error: function(data) {
+        console.log(data);
     }
   });
 }
