--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <!-- MENU SECTION  -->
 <div class="menu-container" onclick="openMenu()">
-  <!-- <i class="fas fa-bars"></i> -->
   <div class="bar1"></div>
   <div class="bar2"></div>
   <div class="bar3"></div>
@@ -8,8 +7,8 @@
   <div id="menu-content" class="menu-dropdown">
     <div onclick="openOverlay1()">About</div>
     <% if !session[:id] %>
-      <div onclick="openOverlay2()">Login</div>
-      <div onclick="openOverlay3()">Signup</div>
+      <div onclick="openOverlay2()">Signup</div>
+      <div onclick="">Spotify Authentication</div>
     <% else %>
       <%= link_to "Profile", "/profile" %>
       <%= link_to "Logout", logout_path, method: :post %>
@@ -27,20 +26,8 @@
   </div>
 </div>
 
-<!-- <div id="overlay2" class="overlay-container">
+<div id="overlay2" class="overlay-container">
   <div class="closebtn" onclick="closeOverlay2()">&times;</div>
-  <div class="overlay-login"> -->
-    <%#= form_tag("/login", method: "post", remote: true) do %>
-      <!-- <h2>Login</h2> -->
-      <%#= text_field_tag :email, nil, placeholder: "Email" %><br>
-      <%#= text_field_tag :password, nil, placeholder: "Password" %><br>
-      <%#= submit_tag("Login", {:class => 'loginBtn'}) %>
-    <%# end %>
-  <!-- </div>
-</div> -->
-
-<div id="overlay3" class="overlay-container">
-  <div class="closebtn" onclick="closeOverlay3()">&times;</div>
   <div class="overlay-signup">
     <%= form_for @user, remote:true do |f| %>
       <h2>Signup</h2>
