--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,9 +1,7 @@
 .feature {
-  width: 20vw;
   position: absolute;
   padding: 3%;
   top: 20vh;
-  min-height: 20%;
   background-color: rgba(255, 255, 255, 0.7);
   h2 {
     color: white;
@@ -16,12 +14,12 @@
 
 #poem {
   left: 5vw;
-  height: 20vh;
+  height: 60vh;
   overflow: scroll;
 }
 
 #music {
-  left: 37vw;
+  left: 47vw;
 }
 
 #event {
@@ -42,7 +40,7 @@
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 600px) {
   .player {
     display: none;
   }
@@ -56,5 +54,22 @@
   #poem {
     margin-top: 20vh;
   }
+}
 
+@media only screen and (min-width: 600px) {
+  #poem {
+    width: 33vw;
+    font-size: 24px;
+  }
+
+  #music {
+    width: 15vw;
+  }
+
+  #event {
+    width: 20vw;
+  }
+  .feature {
+    min-height: 20vh;
+  }
 }
