--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,7 @@
 <!-- EMOJI GRID -->
 <h1 id="main">What's The Mood?</h1>
 <!-- <h3>Welcome <%=current_spotify_user.username if current_spotify_user%></h3> -->
-<%= form_tag("/mood", method: "post") do %>
+<%= form_tag("/mood", method: "post", class: "mood") do %>
   <div class='container'>
     <%= hidden_field_tag 'coordinates' %>
     <% Dir.foreach('./app/assets/images/emojis') do |item| %>
