--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -2,13 +2,22 @@
 
   <%= month_calendar do |date| %>
     <%= date.day %>
-    <% end %>
+  <% end %>
+
+  <div class="date-header">
+    <h2 style="text-align:center;">Date</h2>
+  </div>
 
   <div class="results-wrapper">
     <div class="">
-      <p>This is for testing the area of this grid item</p>
+      <img src="assets/emojis/alluring.png" alt="">
     </div>
-    <div class="">test</div>
-    <div class="">test</div>
- </div>
+    <div class="">
+      <img src="assets/emojis/cool.png" alt="">
+    </div>
+    <div class="">
+      <img src="assets/emojis/furious.png" alt="">
+    </div>
+  </div>
+
 </div>
